--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -26516,6 +26516,77 @@ references:
   commentId: N:WarcraftLegacies.Source.Quests.Naga
   fullName: WarcraftLegacies.Source.Quests.Naga
   nameWithType: WarcraftLegacies.Source.Quests.Naga
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold
+  name: QuestBlackrookHold
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.html
+  commentId: T:WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold
+  nameWithType: QuestBlackrookHold
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.#ctor(MacroTools.LegendSystem.Capital)
+  name: QuestBlackrookHold(Capital)
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.html#WarcraftLegacies_Source_Quests_Naga_QuestBlackrookHold__ctor_MacroTools_LegendSystem_Capital_
+  commentId: M:WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.#ctor(MacroTools.LegendSystem.Capital)
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.QuestBlackrookHold(MacroTools.LegendSystem.Capital)
+  nameWithType: QuestBlackrookHold.QuestBlackrookHold(Capital)
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.#ctor*
+  name: QuestBlackrookHold
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.html#WarcraftLegacies_Source_Quests_Naga_QuestBlackrookHold__ctor_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.#ctor
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.QuestBlackrookHold
+  nameWithType: QuestBlackrookHold.QuestBlackrookHold
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.OnAdd(MacroTools.FactionSystem.Faction)
+  name: OnAdd(Faction)
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.html#WarcraftLegacies_Source_Quests_Naga_QuestBlackrookHold_OnAdd_MacroTools_FactionSystem_Faction_
+  commentId: M:WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.OnAdd(MacroTools.FactionSystem.Faction)
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.OnAdd(MacroTools.FactionSystem.Faction)
+  nameWithType: QuestBlackrookHold.OnAdd(Faction)
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.OnAdd*
+  name: OnAdd
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.html#WarcraftLegacies_Source_Quests_Naga_QuestBlackrookHold_OnAdd_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.OnAdd
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.OnAdd
+  nameWithType: QuestBlackrookHold.OnAdd
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.OnComplete(MacroTools.FactionSystem.Faction)
+  name: OnComplete(Faction)
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.html#WarcraftLegacies_Source_Quests_Naga_QuestBlackrookHold_OnComplete_MacroTools_FactionSystem_Faction_
+  commentId: M:WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.OnComplete(MacroTools.FactionSystem.Faction)
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.OnComplete(MacroTools.FactionSystem.Faction)
+  nameWithType: QuestBlackrookHold.OnComplete(Faction)
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.OnComplete*
+  name: OnComplete
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.html#WarcraftLegacies_Source_Quests_Naga_QuestBlackrookHold_OnComplete_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.OnComplete
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.OnComplete
+  nameWithType: QuestBlackrookHold.OnComplete
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.RewardDescription
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.html#WarcraftLegacies_Source_Quests_Naga_QuestBlackrookHold_RewardDescription
+  commentId: P:WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.RewardDescription
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.RewardDescription
+  nameWithType: QuestBlackrookHold.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.RewardDescription*
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.html#WarcraftLegacies_Source_Quests_Naga_QuestBlackrookHold_RewardDescription_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.RewardDescription
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.RewardDescription
+  nameWithType: QuestBlackrookHold.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.RewardFlavour
+  name: RewardFlavour
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.html#WarcraftLegacies_Source_Quests_Naga_QuestBlackrookHold_RewardFlavour
+  commentId: P:WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.RewardFlavour
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.RewardFlavour
+  nameWithType: QuestBlackrookHold.RewardFlavour
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.RewardFlavour*
+  name: RewardFlavour
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.html#WarcraftLegacies_Source_Quests_Naga_QuestBlackrookHold_RewardFlavour_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.RewardFlavour
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.RewardFlavour
+  nameWithType: QuestBlackrookHold.RewardFlavour
 - uid: WarcraftLegacies.Source.Quests.Naga.QuestBlackTemple
   name: QuestBlackTemple
   href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestBlackTemple.html
@@ -27299,77 +27370,6 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Quests.Quelthalas.QuestTheBloodElves.RewardFlavour
   nameWithType: QuestTheBloodElves.RewardFlavour
-- uid: WarcraftLegacies.Source.Quests.QuestBlackrookHold
-  name: QuestBlackrookHold
-  href: api-source/WarcraftLegacies.Source.Quests.QuestBlackrookHold.html
-  commentId: T:WarcraftLegacies.Source.Quests.QuestBlackrookHold
-  fullName: WarcraftLegacies.Source.Quests.QuestBlackrookHold
-  nameWithType: QuestBlackrookHold
-- uid: WarcraftLegacies.Source.Quests.QuestBlackrookHold.#ctor(MacroTools.LegendSystem.Capital)
-  name: QuestBlackrookHold(Capital)
-  href: api-source/WarcraftLegacies.Source.Quests.QuestBlackrookHold.html#WarcraftLegacies_Source_Quests_QuestBlackrookHold__ctor_MacroTools_LegendSystem_Capital_
-  commentId: M:WarcraftLegacies.Source.Quests.QuestBlackrookHold.#ctor(MacroTools.LegendSystem.Capital)
-  fullName: WarcraftLegacies.Source.Quests.QuestBlackrookHold.QuestBlackrookHold(MacroTools.LegendSystem.Capital)
-  nameWithType: QuestBlackrookHold.QuestBlackrookHold(Capital)
-- uid: WarcraftLegacies.Source.Quests.QuestBlackrookHold.#ctor*
-  name: QuestBlackrookHold
-  href: api-source/WarcraftLegacies.Source.Quests.QuestBlackrookHold.html#WarcraftLegacies_Source_Quests_QuestBlackrookHold__ctor_
-  commentId: Overload:WarcraftLegacies.Source.Quests.QuestBlackrookHold.#ctor
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Quests.QuestBlackrookHold.QuestBlackrookHold
-  nameWithType: QuestBlackrookHold.QuestBlackrookHold
-- uid: WarcraftLegacies.Source.Quests.QuestBlackrookHold.OnAdd(MacroTools.FactionSystem.Faction)
-  name: OnAdd(Faction)
-  href: api-source/WarcraftLegacies.Source.Quests.QuestBlackrookHold.html#WarcraftLegacies_Source_Quests_QuestBlackrookHold_OnAdd_MacroTools_FactionSystem_Faction_
-  commentId: M:WarcraftLegacies.Source.Quests.QuestBlackrookHold.OnAdd(MacroTools.FactionSystem.Faction)
-  fullName: WarcraftLegacies.Source.Quests.QuestBlackrookHold.OnAdd(MacroTools.FactionSystem.Faction)
-  nameWithType: QuestBlackrookHold.OnAdd(Faction)
-- uid: WarcraftLegacies.Source.Quests.QuestBlackrookHold.OnAdd*
-  name: OnAdd
-  href: api-source/WarcraftLegacies.Source.Quests.QuestBlackrookHold.html#WarcraftLegacies_Source_Quests_QuestBlackrookHold_OnAdd_
-  commentId: Overload:WarcraftLegacies.Source.Quests.QuestBlackrookHold.OnAdd
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Quests.QuestBlackrookHold.OnAdd
-  nameWithType: QuestBlackrookHold.OnAdd
-- uid: WarcraftLegacies.Source.Quests.QuestBlackrookHold.OnComplete(MacroTools.FactionSystem.Faction)
-  name: OnComplete(Faction)
-  href: api-source/WarcraftLegacies.Source.Quests.QuestBlackrookHold.html#WarcraftLegacies_Source_Quests_QuestBlackrookHold_OnComplete_MacroTools_FactionSystem_Faction_
-  commentId: M:WarcraftLegacies.Source.Quests.QuestBlackrookHold.OnComplete(MacroTools.FactionSystem.Faction)
-  fullName: WarcraftLegacies.Source.Quests.QuestBlackrookHold.OnComplete(MacroTools.FactionSystem.Faction)
-  nameWithType: QuestBlackrookHold.OnComplete(Faction)
-- uid: WarcraftLegacies.Source.Quests.QuestBlackrookHold.OnComplete*
-  name: OnComplete
-  href: api-source/WarcraftLegacies.Source.Quests.QuestBlackrookHold.html#WarcraftLegacies_Source_Quests_QuestBlackrookHold_OnComplete_
-  commentId: Overload:WarcraftLegacies.Source.Quests.QuestBlackrookHold.OnComplete
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Quests.QuestBlackrookHold.OnComplete
-  nameWithType: QuestBlackrookHold.OnComplete
-- uid: WarcraftLegacies.Source.Quests.QuestBlackrookHold.RewardDescription
-  name: RewardDescription
-  href: api-source/WarcraftLegacies.Source.Quests.QuestBlackrookHold.html#WarcraftLegacies_Source_Quests_QuestBlackrookHold_RewardDescription
-  commentId: P:WarcraftLegacies.Source.Quests.QuestBlackrookHold.RewardDescription
-  fullName: WarcraftLegacies.Source.Quests.QuestBlackrookHold.RewardDescription
-  nameWithType: QuestBlackrookHold.RewardDescription
-- uid: WarcraftLegacies.Source.Quests.QuestBlackrookHold.RewardDescription*
-  name: RewardDescription
-  href: api-source/WarcraftLegacies.Source.Quests.QuestBlackrookHold.html#WarcraftLegacies_Source_Quests_QuestBlackrookHold_RewardDescription_
-  commentId: Overload:WarcraftLegacies.Source.Quests.QuestBlackrookHold.RewardDescription
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Quests.QuestBlackrookHold.RewardDescription
-  nameWithType: QuestBlackrookHold.RewardDescription
-- uid: WarcraftLegacies.Source.Quests.QuestBlackrookHold.RewardFlavour
-  name: RewardFlavour
-  href: api-source/WarcraftLegacies.Source.Quests.QuestBlackrookHold.html#WarcraftLegacies_Source_Quests_QuestBlackrookHold_RewardFlavour
-  commentId: P:WarcraftLegacies.Source.Quests.QuestBlackrookHold.RewardFlavour
-  fullName: WarcraftLegacies.Source.Quests.QuestBlackrookHold.RewardFlavour
-  nameWithType: QuestBlackrookHold.RewardFlavour
-- uid: WarcraftLegacies.Source.Quests.QuestBlackrookHold.RewardFlavour*
-  name: RewardFlavour
-  href: api-source/WarcraftLegacies.Source.Quests.QuestBlackrookHold.html#WarcraftLegacies_Source_Quests_QuestBlackrookHold_RewardFlavour_
-  commentId: Overload:WarcraftLegacies.Source.Quests.QuestBlackrookHold.RewardFlavour
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Quests.QuestBlackrookHold.RewardFlavour
-  nameWithType: QuestBlackrookHold.RewardFlavour
 - uid: WarcraftLegacies.Source.Quests.QuestBookOfMedivh
   name: QuestBookOfMedivh
   href: api-source/WarcraftLegacies.Source.Quests.QuestBookOfMedivh.html
